--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
+    "react-overlays": "^5.2.1",
     "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
